--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 !.vscode/launch.json
 !.vscode/extensions.json
 !.vscode/*.code-snippets
-
+# inorge
+01-Fundamentals-Part-1/final/
 # Local History for Visual Studio Code
 .history/
 
